ajout recherche paginé multi critere avec specification sur dossier lie a individu
